--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>An interactive sales analysis dashboard highlighting sales, profit, and top/bottom products for 2024.</p>
         <div class="buttons">
           <a href="sales2024.html" class="btn">View Project</a>
-          <a href="https://github.com/your-username/sales2024-dashboard" target="_blank" class="btn github">GitHub Repo</a>
+          <a href="dasboard.html" target="_blank" class="btn github">GitHub Repo</a>
         </div>
       </div>
 
