--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Sales Dashboard – 2024</h2>
         <p>An interactive sales analysis dashboard highlighting sales, profit, and top/bottom products for 2024.</p>
         <div class="buttons">
-          <a href="sales2024.html" class="btn">View Project</a>
+          <a href="dasboard.html" class="btn">View Project</a>
           <a href="dasboard.html" target="_blank" class="btn github">GitHub Repo</a>
         </div>
       </div>
