--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <div class="projects">
       <div class="card" data-aos="fade-up">
-        <h2>Sales Dashboard – 2024</h2>
+        <h2>Product Sales Performance Dashboard </h2>
         <p>An interactive sales analysis dashboard highlighting sales, profit, and top/bottom products for 2024.</p>
         <div class="buttons">
-          <a href="sales2024.html" class="btn">View Project</a>
-          <a href="https://github.com/your-username/sales2024-dashboard" target="_blank" class="btn github">GitHub Repo</a>
+          <a href="product.html" class="btn">View Project</a>
+          
         </div>
       </div>
 
