--- a/product.html
+++ b/product.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css_sty.css" />
 </head>
 <body>
+  <header>
+    <a href="index.html" class="home-button">Home</a>
+  </header>
   <div class="container">
     <h1>📊 Product Sales Performance Dashboard – 2024</h1>
     
