--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
       </div>
 
       <div class="card" data-aos="fade-up" data-aos-delay="300">
-        <h2>Customer Retention Dashboard</h2>
-        <p>Analyzes customer churn, retention trends, and loyalty metrics for strategic insights.</p>
+        <h2>Breast Cancer and Heart Disease Diagnosis using Machine Learning</h2>
+        <p>This project evaluates the performance of various machine learning models for diagnosing breast cancer using the Wisconsin Breast Cancer Dataset and predicting heart disease using the Cleveland heart disease dataset. The study demonstrates the potential for early diagnosis and improved clinical decision-making</p>
         <div class="buttons">
-          <a href="retention.html" class="btn">View Project</a>
+          <a href="BC.html" class="btn">View Project</a>
+          <a href="https://github.com/your-username/retention-dashboard" target="_blank" class="btn github">GitHub Repo</a>
           <a href="https://github.com/your-username/retention-dashboard" target="_blank" class="btn github">GitHub Repo</a>
         </div>
       </div>
