--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <p>This project evaluates the performance of various machine learning models for diagnosing breast cancer using the Wisconsin Breast Cancer Dataset and predicting heart disease using the Cleveland heart disease dataset. The study demonstrates the potential for early diagnosis and improved clinical decision-making</p>
         <div class="buttons">
           <a href="BC.html" class="btn">View Project</a>
-          <a href="https://github.com/navya2495/dashboards/blob/main/BREAST_CANCER%20.ipynb" target="_blank" class="btn github">GitHub Repo</a>
-          <a href="https://github.com/your-username/retention-dashboard" target="_blank" class="btn github">GitHub Repo</a>
+          <a href="https://github.com/navya2495/dashboards/blob/main/BREAST_CANCER%20.ipynb" target="_blank" class="btn github">Pyhton code file for Breast Cancer</a>
+          <a href="https://github.com/navya2495/dashboards/blob/main/HEART_DISEASE.ipynb" target="_blank" class="btn github">Pyhton code file for Heart Disease</a>
         </div>
       </div>
     <h2 class="section-heading" data-aos="fade-right">sql projects</h2>
