--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Sales Operations Dashboard</h2>
         <p>This dashboard provides insights into overall sales performance using visual storytelling techniques.</p>
         <div class="buttons">
-          <a href="dasboard.html" class="btn">View Project</a>
+          <a href="board.html" class="btn">View Project</a>
           
         </div>
       </div>
