--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1 data-aos="fade-down">My Projects</h1>
-    <p class="description" data-aos="fade-up">Explore my interactive dashboards created with HTML, CSS, and Power BI. Each project is hosted and linked via GitHub for easy access.</p>
+    <p class="description" data-aos="fade-up">Explore my interactive dashboards in Power BI, as well as other projects using Python, SQL, and machine learning. Each project is hosted on GitHub with a link for easy access.</p>
     <h2 class="section-heading" data-aos="zoom-in">📊 My Dashboard Projects</h2>
 
     <div class="projects">
