--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       </div>
     <h2 class="section-heading" data-aos="fade-right">sql projects</h2>
       <div class="card" data-aos="fade-up" data-aos-delay="400">
-        <h2>Financial Overview Dashboard</h2>
-        <p>Summarizes financial KPIs such as revenue, expenses, and profit margins in a clean layout.</p>
+        <h2>SQL project</h2>
+        <p>Hospitals need to monitor patient admissions, bed occupancy, department load, and predict peak periods.</p>
         <div class="buttons">
-          <a href="finance.html" class="btn">View Project</a>
-          <a href="https://github.com/your-username/finance-dashboard" target="_blank" class="btn github">GitHub Repo</a>
+          <a href="sql.html" class="btn">View Project</a>
+          
         </div>
       </div>
 
