--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2 class="section-heading" data-aos="fade-right">python projects</h2>
 
       <div class="card" data-aos="fade-up" data-aos-delay="200">
-        <h2>Determinants of Insurance Charges</h2>
+        <h2>Determinants of Insurance Charges( R language)</h2>
         <p>This project identifies factors affecting insurance charges and builds models to predict medical costs.</p>
         <div class="buttons">
           <a href="insurance.html" class="btn">View Project</a>
