--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <ul class="contact-info">
         <li><strong>Name:</strong>Jaladurgam Navya</li>
         <li><strong>Email:</strong> <a href="mailto:your.email@example.com">jaladurgamnavya@gmail.com</a></li>
-        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></li>
-        <li><strong>GitHub:</strong> <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></li>
+        <li><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/navya-jaladurgam" target="_blank">linkedin.com/in/your-profile</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/navya2495/dashboards" target="_blank">github.com/your-username</a></li>
       </ul>
     </footer>
 </body>
